--- a/project/board/templates/board/category_success.html
+++ b/project/board/templates/board/category_success.html
@@ -71,7 +71,7 @@
         <div class="category__form__bottom">
           <div>{{ category_name }} was successfully</div>
           <div>submitted! ;) Please wait while we</div>
-          <div>examine the value of the community.</div>
+          <div>examine the community.</div>
         </div>
       </div>
     </div>
