--- a/project/accounts/templates/accounts/mail.html
+++ b/project/accounts/templates/accounts/mail.html
@@ -1,9 +1,8 @@
-{% load staticfiles %}
-<link rel="stylesheet" href="http://localhost:8000/static/accounts/css/mail.css">
+<link rel="stylesheet" href="http://mycampus.site/static/accounts/css/mail.css">
 <div id="mail__wrapper">
     <div class="mail__logo">
         <div class="logo-img">
-            <img src="http://localhost:8000/static/images/logo2.png" alt="my campus">
+            <img src="http://mycampus.site/static/images/logo2.png" alt="my campus">
         </div>
     </div>
     <div class="mail__message">
