--- a/project/chat/static/chat/css/index.css
+++ b/project/chat/static/chat/css/index.css
@@ -61,7 +61,8 @@ hr{
     display: flex;
     justify-content: flex-start;
     padding: 10px 0px;
-    border-bottom: 1px solid #E3E3E3
+    border-bottom: 1px solid #E3E3E3;
+    cursor: pointer;
 }
 .prof{
     margin-left: 14.8px;
