로그아웃 할때 disconnect

--- a/project/accounts/templates/accounts/mypage.html
+++ b/project/accounts/templates/accounts/mypage.html
@@ -147,7 +147,9 @@
 
     function logOut() {
       if (confirm('Do you want to log out?'))
-        location.href = '{% url 'core:accounts:logout' url_name %}'
+        sb.disconnect(function(){
+            location.href = '{% url 'core:accounts:logout' url_name %}'
+        })
     }
 
 </script>
