modify signup submit

--- a/project/accounts/templates/accounts/signup.html
+++ b/project/accounts/templates/accounts/signup.html
@@ -57,7 +57,7 @@
                             and that you have read our <a href="#" class="signup__terms-info-link">Privacy Policy</a>
                             and <a href="#" class="signup__terms-info-link">Content Policy</a>
                         </p>
-                        <button class="signup__submit" onclick="onClickSubmit()">Next</button>
+                        <button class="signup__submit" type="submit">Next</button>
                     </div>
                 </form>
             </div>
