재원이가 제일 못 하는 세션 사용법! 뒤로가기도 못함 ;

--- a/project/board/templates/board/post_detail.html
+++ b/project/board/templates/board/post_detail.html
@@ -61,7 +61,7 @@
   <div class="container">
     <div class="detail__wrapper">
       <div class="detail__post__header">
-        <a href="{{ request.META.HTTP_REFERER }}">
+        <a href="{{ request.session.back_url }}">
           <span style="color: #55b8bd;">&lt;</span> My Campus
         </a>
       </div>
