modify mail form

--- a/project/accounts/templates/accounts/mail.html
+++ b/project/accounts/templates/accounts/mail.html
@@ -1,13 +1,14 @@
 <link rel="stylesheet" href="http://mycampus.site/static/accounts/css/mail.css">
 <div id="mail__wrapper">
+  <!--
     <div class="mail__logo">
         <div class="logo-img">
             <img src="http://mycampus.site/static/images/logo2.png" alt="my campus">
         </div>
-    </div>
+    </div> -->
     <div class="mail__message">
         <p>
-            [Team MY CAMPUS]
+            [Team MY CAMPUS] <br>
             Please click on the link provided below to start using MY CAMPUS.
         </p>
     </div>
