add post onclick

--- a/project/board/templates/board/main_board.html
+++ b/project/board/templates/board/main_board.html
@@ -655,6 +655,7 @@
                             postFields.ctgy.name,
                             postFields.name,
                             url.baseUrl + postFields.ctgy.name + '/' + postPk + '/',
+                            url.baseUrl + postFields.ctgy.name + '/' + postPk + '/',
                             postTitle,
                             postContent, //
                             view_icon_will_use,
