--- a/project/board/static/board/css/board_post/board_post_mobile.css
+++ b/project/board/static/board/css/board_post/board_post_mobile.css
@@ -181,7 +181,7 @@
     display: flex;
     flex-direction: column;
     margin-top: 10px;
-    /* height: 100%; */
+    height: 100%;
 }
 
 .post__mid__title {
@@ -237,7 +237,7 @@
 .post__bottom__icon {
     display: flex;
     align-items: flex-end;
-    width: 40%;
+    width: 80%;
     justify-content: space-between;
 }
 
