--- a/project/board/templates/board/notification.html
+++ b/project/board/templates/board/notification.html
@@ -88,7 +88,7 @@
       <div class="noti__top__time">{{ notification.time_interval }}</div>
       </div>
       <div class="noti__content__mid">
-      {{ notification.from_n }} {{ notification.get_context }}
+      {{ notification.name }} {{ notification.get_context }}
       </div>
       </div>
       </div>
